Fix words uncovering on hover

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -40,6 +40,7 @@ body {
   font-family: 'M PLUS Rounded 1c', Inter, Arial, sans-serif;
   background: var(--c_bg);
   transition: background-color .2s ease-out;
+  user-select: none;
 }
 
 button {
